# DataCleanOpenEnv

./: .huggingfaceignore  Dockerfile  README.md  Submission prerequisties.md  audit_scores.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
datacleanenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py
tests/: test_dataclean.py
